--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 clap = "3.0.0-beta.2"
 reqwest = { version = "0.10.8", features = ["json"] }
+serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 # Need to use an older version of tokio because of reqwest
 tokio = { version = "0.2.22", features = ["macros"] }
