--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 async-stream = "0.3.0"
 clap = "3.0.0-beta.2"
+csv-async = { version = "1.0.0", features = ["tokio", "with_serde"] }
 futures = "0.3.8"
 reqwest = { version = "0.10.8", features = ["json"] }
 serde = { version = "1.0.117", features = ["derive"] }
