--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 
 [dependencies]
 async-stream = "0.3.0"
+chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.2"
-csv-async = { version = "1.0.0", features = ["tokio", "with_serde"] }
 futures = "0.3.8"
 reqwest = { version = "0.10.8", features = ["json"] }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 # Need to use an older version of tokio because of reqwest
-tokio = { version = "0.2.22", features = ["macros"] }
+tokio = { version = "0.2.22", features = ["macros", "fs"] }
