--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ reqwest = { version = "0.10.8", features = ["json"] }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 # Need to use an older version of tokio because of reqwest
-tokio = { version = "0.2.22", features = ["macros", "fs"] }
+tokio = { version = "0.3", features = ["full"] }
+tokio-compat-02 = "0.1.2"
