--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ async-stream = "0.3.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.2"
 futures = "0.3.8"
-reqwest = { version = "0.10.8", features = ["json"] }
+reqwest = { version = "0.10.8", features = ["json", "stream"] }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 # Need to use an older version of tokio because of reqwest
