--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "slack-emoji-exporter"
+name = "slack-emoji"
 version = "0.1.0"
 authors = ["Steve Franchak <stevefranchak@gmail.com>"]
 edition = "2018"
@@ -13,5 +13,5 @@ clap = "3.0.0-beta.2"
 futures = "0.3.12"
 reqwest = { version = "0.11.0", features = ["json", "stream"] }
 serde = { version = "1.0.123", features = ["derive"] }
-serde_json = "1.0.61"
-tokio = { version = "1.1.1", features = ["full"] }
+serde_json = "1.0.62"
+tokio = { version = "1.2.0", features = ["full"] }
