--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "slack-emoji"
 version = "0.1.0"
 authors = ["Steve Franchak <stevefranchak@gmail.com>"]
+description = "CLI tool for downloading emojis from or uploading emojis to a Slack workspace."
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
