--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ edition = "2018"
 async-stream = "0.3.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "3.0.0-beta.2"
+colored = "2.0.0"
 futures = "0.3.12"
+log = "0.4"
+loggerv = "0.7"
 phf = "0.8.0"
 reqwest = { version = "0.11.0", features = ["json", "stream"] }
 serde = { version = "1.0.123", features = ["derive"] }
