--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ futures = "0.3.12"
 log = "0.4"
 loggerv = "0.7"
 phf = "0.8.0"
-reqwest = { version = "0.11.0", features = ["json", "stream"] }
+reqwest = { version = "0.11.0", features = ["json", "multipart", "stream"] }
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 tokio = { version = "1.2.0", features = ["full"] }
