--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-stream = "0.3.1"
+async-stream = "0.3.2"
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = "3.0.0-beta.2"
+clap = { version = "3.1.2", features = ["derive", "env"] }
 colored = "2.0.0"
 env_logger = "0.8.3"
 futures = "0.3.14"
