--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
           override: true
-          components: clippy
+          profile: minimal
+          toolchain: stable
       - name: Try release build
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release --all-features
       - name: Run tests
-        uses: actions-rs/cargo@v1.0.1
+        uses: actions-rs/cargo@v1
         with:
           command: test
