--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ futures = "0.3.21"
 log = "0.4.14"
 phf = "0.11.1"
 # https://github.com/sfackler/rust-openssl/issues/1448#issuecomment-1159102087
-reqwest = { version = "0.11.14", features = ["json", "multipart", "stream", "rustls-tls-native-roots"] }
+reqwest = { version = "0.11.14", default-features = false, features = ["json", "multipart", "stream", "rustls-tls-native-roots"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tokio = { version = "1.17.0", features = ["full"] }
