--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.4.0
     hooks:
       - id: check-byte-order-marker
       - id: check-case-conflict
@@ -16,3 +16,11 @@ repos:
       - id: clippy
       - id: cargo-check
       - id: fmt
+  - repo: local
+    hooks:
+      - id: rust-test
+        name: rust-test
+        entry: cargo test
+        language: system
+        pass_filenames: false
+        always_run: true
